bin_PROGRAMS = yaxafileutil-gui yaxafileutil-cli
yaxafileutil_gui_SOURCES = buffers.c crypt.c misc.c parseoptions.c workthread.c gui.c
yaxafileutil_cli_SOURCES = buffers.c crypt.c misc.c parseoptions.c workthread.c cli.c

yaxafileutil_gui_CFLAGS = -Dgui $(GTK_CFLAGS)
yaxafileutil_gui_LDADD = $(GTK_LIBS)
