bin_PROGRAMS = yaxafileutil-gui yaxafileutil-cli
yaxafileutil_gui_SOURCES = gui.c buffers.c crypt.c misc.c parseoptions.c workthread.c
yaxafileutil_cli_SOURCES = cli.c buffers.c crypt.c misc.c parseoptions.c workthread.c

yaxafileutil_gui_CFLAGS = -Dgui $(GTK_CFLAGS)
yaxafileutil_gui_LDADD = $(GTK_LIBS)
